more publish to broker

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Consumer of API",
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/.bin/jest __tests__/ --runInBand"
+    "test": "./node_modules/.bin/jest __tests__/ --runInBand",
+    "publish:pact": "node ./publish.js"
   },
   "devDependencies": {
     "jest": "^24.5.0"
@@ -15,6 +16,7 @@
   "dependencies": {
     "@pact-foundation/pact": "^9.11.0",
     "axios": "^0.19.2",
+    "cross-env": "^7.0.2",
     "jest-pact": "^0.5.2"
   },
   "repository": {
