--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,8 +10,10 @@ jobs:
       - node/with-cache:
           steps:
             - run: npm install
-            - run: npm test
-            - run: npm run publish:pact
+            - run: npm run test:unit
+            - run: npm run test:pact
+            - run: npm run publish
+            - run: npm run verify
 workflows:
     build-and-test:
       jobs:
